--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@react-pdf/renderer": "^3.4.0",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
